@@ -57,7 +57,7 @@ public final class master_jsp extends org.apache.jasper.runtime.HttpJspBase
 
 
   HMaster master = (HMaster)getServletContext().getAttribute(HMaster.MASTER);
-  HBaseConfiguration conf = new HBaseConfiguration();
+  HBaseConfiguration conf = master.getConfiguration();
   TableFormatter formatter = new HtmlTableFormatter(out);
   ShowCommand show = new ShowCommand(out, formatter, "tables");
   HServerAddress rootLocation = master.getRootRegionLocation();
